// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements MqttServerBindingElement should refract to semantic ApiDOM tree 1`] = `
(MqttServerBindingElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (NumberElement))
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (BooleanElement))))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements MqttServerBindingElement given sessionExpiryInterval field of type SchemaElement should refract to semantic ApiDOM tree 1`] = `
(MqttServerBindingElement
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements MqttServerBindingElement given sessionExpiryInterval field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MqttServerBindingElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements MqttServerBindingElement given maximumPacketSize field of type SchemaElement should refract to semantic ApiDOM tree 1`] = `
(MqttServerBindingElement
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements MqttServerBindingElement given maximumPacketSize field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MqttServerBindingElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
